# semantic-chunker

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yaml
